Merge branch 'feature/KIBON-4329' into 'warmfix/2025.22.1'
KIBON-4329: IGNORIEREND_DEFINITIV Status über mehrere Mutationen beibehalten

See merge request kibon/kibon-app!1171